qmsystem2 (1.2.0) unstable; urgency=low

  [Matias Muhonen]
  * Add new enumeration "SDK" to MeeGo::QmUSBMode::Mode (Fixes: NB#255893)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 16 May 2011 10:54:39 +0300

qmsystem2 (1.1.12) unstable; urgency=low

  [Matias Muhonen]
  * Determine offline mode correctly with NFC (Fixes: NB#254535)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 13 May 2011 07:27:17 +0300

qmsystem2 (1.1.11) unstable; urgency=low

  [Yang Yang]
  * Fix manual-lock-test

  [Matias Muhonen]
  * Fix include statements in QmSystem API reference documentation (Fixes: NB#253271)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 06 May 2011 08:52:27 +0300

qmsystem2 (1.1.10) unstable; urgency=low

  [Matias Muhonen]
  * Fix doxygen warnings
  * Use relative input directory path for doxygen (Fixes: NB#249205)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 21 Apr 2011 11:24:06 +0300

qmsystem2 (1.1.9) unstable; urgency=low

  [Yang Yang]
  * Add declination test for manual-compass-test

  [Matias Muhonen]
  * Use -Werror when compiling the source
  * Fix use of freed string in remoteTime() (Fixes: NB#245023)

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Fri, 8 Apr 2011 10:00:19 +0300

qmsystem2 (1.1.8) unstable; urgency=low

  [Matias Muhonen]
  * Doxygen config fields missing from qmsystem2 debian/api (Fixes: NB#243293)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 05 Apr 2011 10:07:25 +0300

qmsystem2 (1.1.7) unstable; urgency=low

  [Matias Muhonen]
  * Generate the documentation package for all architectures
  * Added the use time methods to the QmBattery stub
  * Unused code removed (Fixes: NB#242029)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 01 Apr 2011 09:56:51 +0300

qmsystem2 (1.1.6) unstable; urgency=low

  [Matias Muhonen]
  * Allocate the QmTimePrivate2 class from heap (Fixes: NB#237975)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 25 Mar 2011 13:20:31 +0200
