@@ -1,5 +1,8 @@
 qmsystem2 (1.2.0) unstable; urgency=low
 
+  [Yang Yang]
+  * Add "SDK" test to manual-usbmode-test
+
   [Matias Muhonen]
   * Add new enumeration "SDK" to MeeGo::QmUSBMode::Mode (Fixes: NB#255893)
 
